--- a/package.json
+++ b/package.json
@@ -40,16 +40,29 @@
     "test:jest": "jest"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "@fortawesome/fontawesome-pro": "git+https://c60bc8df5eb4cc89381f80ea83ddd07658793758:x-oauth-basic@github.com/FortAwesome/Font-Awesome-Pro.git",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
+    "@react-google-maps/api": "^2.2.0",
+    "@wordpress/block-library": "^3.2.13",
+    "formik-material-ui-lab": "^0.0.8",
+    "formik-material-ui-pickers": "^0.0.12",
+    "formik-material-ui": "^3.0.1",
+    "lodash": "^4.17.21",
+    "material-ui-dropzone": "^3.5.0",
     "next-auth": "^3.27.1",
     "next-connect": "^0.10.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "11.0.1",
+    "react-dom": "17.0.2",
+    "react": "17.0.2"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.20",
     "@arkweid/lefthook": "^0.7.6",
     "@babel/core": "^7.14.6",
+    "@graphql-eslint/eslint-plugin": "^1.1",
     "@next/bundle-analyzer": "^11.0.1",
     "@storybook/addon-a11y": "^6.3.1",
     "@storybook/addon-essentials": "^6.3.1",
@@ -59,6 +72,8 @@
     "@storybook/react": "^6.3.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@wordpress/eslint-plugin": "^9.0",
+    "@wordpress/prettier-config": "^1.0",
     "algoliasearch": "^4.10.2",
     "apollo-link-rest": "^0.8.0-beta.0",
     "autoprefixer": "^10.2.6",
@@ -66,27 +81,27 @@
     "babel-loader": "^8.2.2",
     "dayjs": "^1.10.5",
     "deepmerge": "^4.2.2",
-    "eslint": "^7.29.0",
     "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsdoc": "^35.4.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint": "^7.29.0",
     "formidable": "^1.2.2",
     "formik": "^2.2.9",
-    "graphql": "^15.5.1",
     "graphql-anywhere": "^4.2.7",
+    "graphql": "^15.5.1",
     "hamburger-react": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
-    "markdownlint": "^0.23.1",
     "markdownlint-cli": "^0.27.1",
+    "markdownlint": "^0.23.1",
     "next-seo": "^4.26.0",
     "next-sitemap": "^1.6.124",
-    "postcss": "^8.3.5",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.3.2",
+    "postcss": "^8.3.5",
+    "prettier": "npm:wp-prettier@latest",
     "prop-types": "^15.7.2",
     "react-instantsearch-dom": "^6.11.2",
     "react-is": "^17.0.2",
@@ -95,8 +110,8 @@
     "rimraf": "^3.0.2",
     "storybook-addon-next-router": "^2.0.4",
     "storybook-css-modules-preset": "^1.1.1",
-    "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
+    "stylelint": "^13.13.1",
     "tailwindcss": "^2.2.4",
     "yup": "^0.32.9"
   }
