init config and basic header

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,13 @@
 {
-  "presets": ["next/babel"]
+	"presets": [
+		[
+			"next/babel",
+			{
+				"preset-react": {
+					"importSource": "@welldone-software/why-did-you-render"
+				}
+			}
+		]
+	],
+	"plugins": [ "superjson-next" ]
 }
