--- a/package.json
+++ b/package.json
@@ -40,11 +40,27 @@
     "test:jest": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "git+https://c60bc8df5eb4cc89381f80ea83ddd07658793758:x-oauth-basic@github.com/FortAwesome/Font-Awesome-Pro.git",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
+    "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@react-google-maps/api": "^2.2.0",
+    "@wordpress/block-library": "^3.2.13",
+    "formik-material-ui": "^3.0.1",
+    "formik-material-ui-lab": "^0.0.8",
+    "formik-material-ui-pickers": "^0.0.12",
+    "lodash": "^4.17.21",
+    "material-ui-dropzone": "^3.5.0",
     "next": "11.0.1",
     "next-auth": "^3.27.3",
     "next-connect": "^0.10.1",
+    "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react": "17.0.2"
+    "superjson": "^1.7.4"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.21",
@@ -60,11 +76,16 @@
     "@storybook/react": "^6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
+    "@wordpress/eslint-plugin": "^9.0",
+    "@wordpress/prettier-config": "^1.0",
+    "@wordpress/stylelint-config": "^19.1.0",
     "algoliasearch": "^4.10.3",
     "apollo-link-rest": "^0.8.0-beta.0",
     "autoprefixer": "^10.3.1",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-superjson-next": "^0.3.0",
     "dayjs": "^1.10.6",
     "deepmerge": "^4.2.2",
     "eslint": "^7.30.1",
@@ -75,13 +96,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "formidable": "^1.2.2",
     "formik": "^2.2.9",
-    "graphql-anywhere": "^4.2.7",
     "graphql": "^15.5.1",
+    "graphql-anywhere": "^4.2.7",
     "hamburger-react": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
-    "markdownlint-cli": "^0.27.1",
     "markdownlint": "^0.23.1",
+    "markdownlint-cli": "^0.27.1",
     "next-seo": "^4.26.0",
     "next-sitemap": "^1.6.140",
     "postcss": "^8.3.5",
@@ -94,10 +115,11 @@
     "react-syntax-highlighter": "^15.4.3",
     "react-twitter-embed": "^3.0.3",
     "rimraf": "^3.0.2",
+    "sass": "^1.35.2",
     "storybook-addon-next-router": "^3.0.5",
     "storybook-css-modules-preset": "^1.1.1",
-    "stylelint-config-standard": "^22.0.0",
     "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
     "tailwindcss": "^2.2.4",
     "yup": "^0.32.9"
   }
